After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 772499 - opencv: Fix memory leak by gst_caps_to_string
opencv: Fix memory leak by gst_caps_to_string
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Linux
: Normal minor
: 1.10.0
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-10-06 07:02 UTC by Jimmy Ohn
Modified: 2016-10-31 14:34 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
opencv: Fix memory leak by gst_caps_to_string (1.27 KB, patch)
2016-10-06 07:02 UTC, Jimmy Ohn
committed Details | Review

Description Jimmy Ohn 2016-10-06 07:02:04 UTC
As I know, gst_caps_to_string function returned allocated memory.
The following patch fixes memory leakage about the gst_caps_to_string function.
Comment 1 Jimmy Ohn 2016-10-06 07:02:39 UTC
Created attachment 337041 [details] [review]
opencv: Fix memory leak by gst_caps_to_string
Comment 2 Sebastian Dröge (slomo) 2016-10-06 10:30:42 UTC
Attachment 337041 [details] pushed as 701e54c - opencv: Fix memory leak by gst_caps_to_string